# PackMind

./: .gitignore  Cargo.toml  NOTICE  PROVENANCE.md  README.md
crates/packmind-cli/: Cargo.toml
crates/packmind-cli/src/: bench.rs  demo.rs  doctor.rs  main.rs  prctx.rs
crates/packmind-cli/tests/: cli_test.rs  pack_test.rs
crates/packmind-core/: Cargo.toml
crates/packmind-core/src/: config.rs  hash.rs  lib.rs  model.rs  norm.rs  pack.rs  store.rs  tokens.rs
crates/packmind-indexer/: Cargo.toml
crates/packmind-indexer/src/: index.rs  lib.rs  walk.rs
crates/packmind-indexer/tests/: index_test.rs
crates/packmind-mcp/: Cargo.toml
crates/packmind-mcp/src/: lib.rs  tools.rs
crates/packmind-planner/: Cargo.toml
crates/packmind-planner/src/: candidates.rs  lib.rs  plan.rs  profile.rs  render.rs  report.rs
crates/prefixgraph-cli/: Cargo.toml
crates/prefixgraph-cli/src/: main.rs
crates/prefixgraph-cli/tests/: pack_test.rs
crates/prefixgraph-core/: Cargo.toml
crates/prefixgraph-core/src/: hash.rs  lib.rs  norm.rs  pack.rs  store.rs
crates/prefixgraph-indexer/: Cargo.toml
crates/prefixgraph-indexer/src/: index.rs  lib.rs  plugin.rs  walk.rs
crates/prefixgraph-indexer/src/langs/: java.rs  mod.rs  python.rs  typescript.rs
crates/prefixgraph-indexer/tests/: index_test.rs
crates/prefixgraph-mcp/: Cargo.toml
crates/prefixgraph-mcp/src/: lib.rs  tools.rs
crates/prefixgraph-planner/: Cargo.toml
crates/prefixgraph-planner/src/: candidates.rs  lib.rs  plan.rs  render.rs
demo/: generate.py  packmind-demo.html  template.html
docs/: USAGE.md
docs/integrations/: README.md  aider.md  claude-code.md  cline.md  continue.md  cursor.md
eval/results/github_20_20260612T151403Z/: manifest.json  pack_metrics.csv  pack_metrics.jsonl  provenance.json  provenance.md  repo_index_metrics.csv  report.md
eval/results/packmind_20_20260612T163042Z/: manifest.json  pack_metrics.csv  pack_metrics.jsonl  provenance.json  provenance.md  repo_index_metrics.csv  report.md
eval/results/packmind_20_20260612T174255Z/: manifest.json  pack_metrics.csv  pack_metrics.jsonl  provenance.json  provenance.md  repo_index_metrics.csv  report.md
examples/small-python-service/: .gitignore  README.md  app.py  auth.py  fx.py  payments.py
examples/small-python-service/tests/: test_payments.py
scripts/: eval_github_repos.py  playground.sh  verify_github_eval.py
