[workspace]
resolver = "2"
members = [
    "crates/packmind-core",
    "crates/packmind-indexer",
    "crates/packmind-planner",
    "crates/packmind-mcp",
    "crates/packmind-cli",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Rahulkug/PackMind"
authors = ["PackMind contributors"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
ulid = "1"
tiktoken-rs = "0.6"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
