[package]
name = "packmind-cli"
description = "PackMind: AST-aware context and prompt-cache optimization for AI coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "packmind"
path = "src/main.rs"

[dependencies]
packmind-core = { path = "../packmind-core" }
packmind-indexer = { path = "../packmind-indexer" }
packmind-planner = { path = "../packmind-planner" }
packmind-mcp = { path = "../packmind-mcp" }
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true
tempfile.workspace = true
