[package]
name = "packmind-core"
description = "Core data model, content addressing, SQLite store, and context pack contract for PackMind"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
hex.workspace = true
once_cell.workspace = true
ulid.workspace = true
tiktoken-rs.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
