[package]
name = "packmind-mcp"
description = "MCP (Model Context Protocol) stdio server exposing PackMind tools to coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
packmind-core = { path = "../packmind-core" }
packmind-indexer = { path = "../packmind-indexer" }
packmind-planner = { path = "../packmind-planner" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
