[package]
name = "prefixgraph-cli"
description = "PrefixGraph: AST-aware context and prompt-cache optimization for AI coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "prefixgraph"
path = "src/main.rs"

[dependencies]
prefixgraph-core = { path = "../prefixgraph-core" }
prefixgraph-indexer = { path = "../prefixgraph-indexer" }
prefixgraph-planner = { path = "../prefixgraph-planner" }
prefixgraph-mcp = { path = "../prefixgraph-mcp" }
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
