[package]
name = "prefixgraph-indexer"
description = "tree-sitter based incremental repo indexer for PrefixGraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prefixgraph-core = { path = "../prefixgraph-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
once_cell.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-java.workspace = true
tree-sitter-typescript.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
