[package]
name = "prefixgraph-mcp"
description = "MCP (Model Context Protocol) stdio server exposing PrefixGraph tools to coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prefixgraph-core = { path = "../prefixgraph-core" }
prefixgraph-indexer = { path = "../prefixgraph-indexer" }
prefixgraph-planner = { path = "../prefixgraph-planner" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
